<resources>
    <string name="app_name">Magic Money Test</string>
    <string name="image_currency">image_currency</string>
    <string name="image_arrow">image_arrow</string>
    <string name="avatar">image_currency</string>
    <string name="magic_money">Magic Money</string>
    <string name="choose_action">Выберите операцию</string>
    <string name="get_cash">Выдача наличных</string>
    <string name="get_balance">Узнать баланс</string>
    <string name="choose_currency">Выберите валюту:</string>
    <string name="balance_info">Баланс:</string>
    <string name="btn_cancel">Отмена</string>
    <string name="btn_get">Получить</string>
    <string name="loading">Считаем деньги</string>
    <string name="string_show_balance">Текущий баланс:</string>
    <string name="string_ruble">100000.0 рублей</string>
    <string name="btn_back">Назад</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="witdraw_optionsQ">Choose the type of note you want to withdraw a cash: </string>
    <string name="check_cash_1">Операция успешна! </string>
    <string name="check_cash_2">Вы получили </string>
    <string name="cash_amount">50 €</string>
    <string name="cash_type_quote">по</string>
    <string name="cash_type">10 €</string>
    <string name="sum_to_withdraw">Выбранная сумма для снятия</string>
</resources>