<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/quoteForSum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sum_to_withdraw"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="50"
        app:layout_constraintTop_toBottomOf="@id/quoteForSum"
        app:layout_constraintLeft_toLeftOf="@id/quoteForSum"
        app:layout_constraintRight_toRightOf="@id/quoteForSum"
        android:textColor="@color/light_blue_900"
        android:textSize="50sp"/>
    <TextView
        android:id="@+id/withdrawQuote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/witdraw_optionsQ"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/variety_of_us_dollar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <RadioGroup
        android:id="@+id/variety_of_us_dollar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/withdrawQuote">
        <RadioButton android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1$"
            />
        <RadioButton android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2$"
            />
        <RadioButton android:id="@+id/radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5$"
            />
        <RadioButton android:id="@+id/radio4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10$"
            />
        <RadioButton android:id="@+id/radio5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="20$"
            />
        <RadioButton android:id="@+id/radio6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="50$"
            />
        <RadioButton android:id="@+id/radio7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="100$"
            />
    </RadioGroup>
    <Button
        android:id="@+id/btnBack"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_back"
        android:backgroundTint="#0A80F5"
        app:layout_constraintTop_toBottomOf="@id/variety_of_us_dollar"
        app:layout_constraintLeft_toLeftOf="@id/withdrawQuote"
        app:layout_constraintRight_toLeftOf="@id/btnGetCash"
        />
    <Button
        android:id="@+id/btnGetCash"
        android:layout_width="150dp"
        android:text="@string/btn_get"
        android:backgroundTint="#0A80F5"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/variety_of_us_dollar"
        app:layout_constraintRight_toRightOf="@id/withdrawQuote"
        app:layout_constraintLeft_toRightOf="@id/btnBack"/>

</androidx.constraintlayout.widget.ConstraintLayout>